fixed visibility on blog read

--- a/src/styles/scss/read.scss
+++ b/src/styles/scss/read.scss
@@ -196,7 +196,7 @@
   h4,
   h5,
   h6 {
-    font-size: 2rem;
+    font-size: 3rem;
     font-family: 'VolteRounded-Bold', Volte Rounded;
     margin-bottom: 10px;
     font-weight: 700;
@@ -207,7 +207,7 @@
   }
 
   p {
-    font-size: 1.2rem;
+    font-size: 1.35rem;
     line-height: 1.5rem;
     font-weight: 400;
     margin: 0 0 15px 0;
